--- a/templates/customer_detail.html
+++ b/templates/customer_detail.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}{{ customer.firstName }} {{ customer.lastName }}{% endblock %}
+{% block title %}{{ customer.concatName() }}{% endblock %}
 
 {% block content %}
 
 
-<h1>{{ customer.firstName }} {{ customer.lastName }}</h1>
+<h1>{{ customer.concatName() }}</h1>
 
 <div class="row">
 
